service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplybyte-service
spec:
  type: NodePort
  selector:
    app: simplybyte
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
      nodePort: 30007
