ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplybyte-ingress
spec:
  rules:
    - host: simplybyte.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplybyte-service
                port:
                  number: 80
